Edit new form, mechanism for user index page, update p.table data type

--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -7,11 +7,19 @@
   <% if user_signed_in? %>
     <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
 
-    <%= @programmers.name %>
+    <% if @programmers != nil %>
+      <%= @programmers.name %>
+    <% else %>
+      <%= "Please create your profile" %>
+    <% end %>
 
     <nav>
-      <%= link_to 'Create Profile', new_programmer_path %>
+      <% if @programmers == nil %>
+        <%= link_to 'Create Profile', new_programmer_path %>
+      <% else %>
       <%= link_to 'Edit Profile'%>
+      <%= link_to 'Show Profile', programmer_path(@programmers) %>
+      <% end %>
     </nav>
 
   <% end %>
