--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,9 +2,15 @@
 	<h1>Edit comment</h1>
 	<%= form_with model: @post, url: programmer_post_path(@programmer), local: true do |form| %>
 		<p>
+				<%= form.label :post_title %><br/>
+				<%= form.text_field :post_title %>
+		</p>
+		<p>
 				<%= form.label :content %><br/>
 				<%= form.text_area :content %>
-				<br/>
+		</p>
+		<br/>
+		<p>
 				<%= form.submit %>
 		</p>
 	<% end %>
