--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <h1>List of posts</h1>
 <ol>
 	<% @post.each do |post| %>
-		<li><%= post.content %></li>
+		<li><h4><%= post.post_title %></h4></li>
+		<p><%= post.content %></p>
 	<% end %>
 </ol>
