--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,13 @@
 <h1> Create new post</h1>
 <%= form_with scope: :post, url: programmer_posts_path, local: true do |form| %>
 	<p>
+		<%= form.label :post_title %><br>
+		<%= form.text_field :post_title %>
+	</p>
+	<p>
 		<%= form.label :content %><br>
 		<%= form.text_area :content %>
+	<p>
 		<%= form.hidden_field :programmer_id, value:@programmer.id %><br/>
 	</p>
 
