--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Post #<%= @post.id %></h1>
+<h4>Post title: <strong><%= @post.post_title %></strong></h4>
 <%= @post.content %>
 
 <%= link_to 'Delete', programmer_post_path,
