Solve bugs in prog controller and view index

--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -7,15 +7,16 @@
   <% if user_signed_in? %>
     <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
 
-    <% if @programmers.empty? %>
+    <% if @programmers == nil %>
       <%= "Please create your profile" %>
       <%= link_to 'Create Profile', new_programmer_path %>
     <% else %>
         <%= @programmers.name %>
+        <%= link_to 'Edit Profile'%>
+        <%= link_to 'Show Profile', programmer_path(@programmers) %>
       <% end %>
 
-      <%= link_to 'Edit Profile'%>
-      <%= link_to 'Show Profile', programmer_path(@programmers) %>
+
     <% end %>
 
 </nav>
