--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,26 +1,28 @@
-<h1>Post #<%= @post.id %></h1>
-<h4>Post title: <strong><%= @post.post_title %></strong></h4>
-<%= @post.content %>
+<div class="container-fluid">
+	<h1>Post #<%= @post.id %></h1>
+	<h4>Post title: <strong><%= @post.post_title %></strong></h4>
+	<%= @post.content %>
 
-<%= link_to 'Delete', post_path,
-      method: :delete,
-      data: { confirm: 'Are you sure?' } %>
+	<%= link_to 'Delete', post_path,
+	      method: :delete,
+	      data: { confirm: 'Are you sure?' } %>
 
 
 
-<%= form_with scope: :comment, url: post_comments_path(post_id: @post.id), local: true do |form| %>
-	<p>
-		<%= form.label :commentContents %>
-		<%= form.text_area :commentContents %>
-	</p>
-	<p>
-		<%= form.hidden_field :post_id, value: @post.id %>
-	</p>
+	<%= form_with scope: :comment, url: post_comments_path(post_id: @post.id), local: true do |form| %>
+		<p>
+			<%= form.label :commentContents %>
+			<%= form.text_area :commentContents %>
+		</p>
+		<p>
+			<%= form.hidden_field :post_id, value: @post.id %>
+		</p>
 
- 	<p>
-		<%= form.submit %>
-	</p>
-<% end %>
+	 	<p>
+			<%= form.submit %>
+		</p>
+	<% end %>
+</div>
 
 
 
