--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,22 @@
   </head>
 
   <body>
+  	<nav class="navbar navbar-light bg-light">
+  	  <a class="navbar-brand" href="/">StackBananaFlow</a>
+  	  <% if !user_signed_in? %>
+	  	  <form class="form-inline">
+	  	    <a class="btn btn-outline-primary" href="/users/sign_in" role="button">
+	  	    Login
+	  	    </a>
+	  	    <div style="padding-left: 10px;">
+	  	      <a class="btn btn-outline-success" href="/users/sign_up" role="button">
+	  	      Sign Up
+	  	      </a>
+	  	    </div>
+	  	  </form>
+	  	<% end %>
+  	</nav>
+
     <%= yield %>
   </body>
 </html>
