--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,8 @@
 		  	</form>
 	  	<% end %>
   	</nav>
-		<p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+		<p class="notice" style="display:none;"><%= notice %></p>
+    <p class="alert" style="display:none;"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
