--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -15,7 +15,7 @@
         <%= link_to 'Edit Profile'%>
         <%= link_to 'Show Profile', programmer_path(@programmers) %>
 
-        <%= link_to 'New Post', new_programmer_post_path(@programmers)%>
+        <%= link_to 'New Post', new_post_path%>
       <% end %>
 <% end %>
 
