--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<h1>Edit comment</h1>
-	<%= form_with model: @post, url: programmer_post_path(@programmer), local: true do |form| %>
+	<%= form_with model: @post, url: post_path, local: true do |form| %>
 		<p>
 				<%= form.label :post_title %><br/>
 				<%= form.text_field :post_title %>
@@ -15,5 +15,5 @@
 		</p>
 	<% end %>
 
-	<%= link_to 'Back', programmer_post_path %>
+	<%= link_to 'Back', posts_path %>
 </div>
