--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,30 @@
   </head>
 
   <body>
+  	<nav class="navbar navbar-light bg-light">
+  	  <a class="navbar-brand" href="/">StackBananaFlow</a>
+  	  <% if !user_signed_in? %>
+	  	  <form class="form-inline">
+	  			  <a class="btn btn-outline-primary" href="/users/sign_in" role="button">Login</a>
+	  			  <div style="padding-left: 10px;">
+	  			    <a class="btn btn-outline-success" href="/users/sign_up" role="button">Sign Up</a>
+	  			  </div>
+	  		</form>
+	  	<% else %>
+	  	  <form class="form-inline">
+	 				<%= link_to 'Forum', programmer_posts_path(current_user.id), html_options={disabled: false}%>
+	 				<div style="padding-left: 30px;">
+	 					<%= link_to 'Chatbox' %>
+	 				</div>
+	 				<div style="padding-left: 30px;">
+	 					<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+	 				</div>
+		  	</form>
+	  	<% end %>
+  	</nav>
+
+		<p class="notice" style="display:none;"><%= notice %></p>
+    <p class="alert" style="display:none;"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
