User can upload profile pic with cloudinary

--- a/app/views/programmers/new.html.erb
+++ b/app/views/programmers/new.html.erb
@@ -1,13 +1,14 @@
 <%= form_with scope: :programmer, url: programmers_path, local: true do |form| %>
-  <p>
-    <%= form.label :name %><br>
+
+    <%= form.label :name %>
     <%= form.text_field :name %>
-  </p>
+
 
     <%= form.label :level %>
     <%= form.select(:level, options_for_select([['Rookie', 'Rookie'], ['Expert', 'Expert']]), :include_blank => true) %>
 
-    <br><%= form.submit "Create" %>
-  </p>
-<% end %>
+    <%= form.label :photo_url %>
+    <%= form.file_field :photo_url %>
+    <%= form.submit "Create" %>
 
+<% end %>
