--- a/app/views/programmers/show.html.erb
+++ b/app/views/programmers/show.html.erb
@@ -1,3 +1,6 @@
 <h2><%= @programmers.name %> 's Profile </h2>
 <h2>Insert Profile Picture</h2>
-<h2>You are a <%= @programmers.level %></h2>
+<%= cl_image_tag(@programmers.photo_url, :width => 300, :height => 300) %>
+<h2>Photo URL</h2>
+<%= @programmers.photo_url %>
+<h2><%= @programmers.level %></h2>
