add: logo for app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
   	<nav class="navbar navbar-light bg-light">
-  	  <a class="navbar-brand" href="/">StackBananaFlow</a>
+  		<a class="navbar-brand" href="/"><img src="/images/banana.png" width="35" height="35" class="d-inline-block align-top" alt="">StackBananaFlow</a>
   	  <% if !user_signed_in? %>
 	  	  <form class="form-inline">
 	  			  <a class="btn btn-outline-primary" href="/users/sign_in" role="button">Login</a>
