add: link to each individual post

--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -11,6 +11,7 @@
         <%= link_to 'Show Profile', programmer_path(@programmers) %>
 
         <%= link_to 'New Post', new_post_path%>
+        <%= link_to 'Show Posts', posts_path %>
       <% end %>
 <% end %>
 
