--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,8 +2,11 @@
 	<h1>List of posts</h1>
 	<ol>
 		<% @post.each do |post| %>
-			<li><h4><%= post.post_title %></h4></li>
+			<li>
+				<%= link_to post.post_title, post_path(post.id)%></li>
 			<p><%= post.content %></p>
 		<% end %>
 	</ol>
+
+	<a class="btn btn-primary" href="/posts/new">Create new post</a>
 </div>
