Add bootstrap to programmer form views

--- a/app/views/programmers/edit.html.erb
+++ b/app/views/programmers/edit.html.erb
@@ -1,14 +1,19 @@
-<%= form_with model: @programmer, url: programmer_path(@programmer), method: "patch", local: true do |form| %>
-    <%= form.hidden_field :id, value:@programmer.id %>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-6 ml-3 mt-3">
+        <%= form_with model: @programmer, url: programmer_path(@programmer), method: "patch", local: true do |form| %>
+            <%= form.hidden_field :id, value:@programmer.id %>
+            <%= form.label :name %>
+            <%= form.text_field :name %>
 
 
-    <%= form.label :level %>
-    <%= form.select(:level, options_for_select([['Rookie', 'Rookie'], ['Expert', 'Expert']]), :include_blank => true) %>
+            <%= form.label :level %>
+            <%= form.select(:level, options_for_select([['Rookie', 'Rookie'], ['Expert', 'Expert']]), :include_blank => true) %>
 
-    <%= form.label :photo_url %>
-    <%= form.file_field :photo_url %>
-    <%= form.submit "Save" %>
-
-<% end %>
+            <%= form.label :photo_url %>
+            <%= form.file_field :photo_url %>
+            <%= form.submit "Save" %>
+        <% end %>
+    </div>
+  </div>
+</div>
