--- a/app/views/programmers/show.html.erb
+++ b/app/views/programmers/show.html.erb
@@ -1,7 +1,13 @@
-<%= link_to 'back', root_path %>
-<div class="">
-  <strong>My Profile</strong><br>
-  <%= @programmer.name %><br>
-  <%= cl_image_tag(@programmer.photo_url, :width => 300, :height => 300) %><br>
-  <%= @programmer.level %>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-6 ml-3 mt-3">
+        <%= link_to 'back', root_path %>
+        <div class="">
+          <strong>My Profile</strong><br>
+          <%= @programmer.name %><br>
+          <%= cl_image_tag(@programmer.photo_url, :width => 300, :height => 300) %><br>
+          <%= @programmer.level %>
+        </div>
+    </div>
+  </div>
 </div>
