--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,8 @@
 <div class="container-fluid">
-	<h1>Post #<%= @post.id %></h1>
-	<h4>Post title: <strong><%= @post.post_title %></strong></h4>
-	<%= @post.content %>
-
-	<%= link_to 'Delete', post_path,
+	<h4>Post title: <strong><%= @post.post_title%></strong></h4><hr/>
+	<%= @post.content %><br/>
+	<%= link_to 'Edit', edit_post_path, :class => "btn btn-info"%>
+	<%= link_to 'Delete', post_path, :class => "btn btn-info",
 	      method: :delete,
 	      data: { confirm: 'Are you sure?' } %>
 
