--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,19 +1,23 @@
 <div class="container-fluid">
-	<h1>Edit comment</h1>
-	<%= form_with model: @post, url: post_path, local: true do |form| %>
-		<p>
-				<%= form.label :post_title %><br/>
-				<%= form.text_field :post_title %>
-		</p>
-		<p>
-				<%= form.label :content %><br/>
-				<%= form.text_area :content %>
-		</p>
-		<p>
-			<br/>
-			<%= form.submit %>
-		</p>
-	<% end %>
+	<div class="row">
+		<div class="col-sm-6 ml-3 mt-3">
+			<h1>Edit comment</h1>
+			<%= form_with model: @post, url: post_path, local: true do |form| %>
+				<p>
+						<%= form.label :post_title %><br/>
+						<%= form.text_field :post_title %>
+				</p>
+				<p>
+						<%= form.label :content %><br/>
+						<%= form.text_area :content %>
+				</p>
+				<p>
+					<br/>
+					<%= form.submit :class => "btn btn-info" %>
+				</p>
+			<% end %>
 
-	<%= link_to 'Back', posts_path %>
+			<%= link_to 'Back', posts_path %>
+		</div>
+	</div>
 </div>
