modify: enhance bootstrap container settings

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-6 ml-3 mt-3">
+		<div class="col-sm-6 offset-sm-2 mt-3">
 			<h1>Edit comment</h1>
 			<%= form_with model: @post, url: post_path, local: true do |form| %>
 				<p>
