--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-6 ml-3 mt-3">
+		<div class="col-sm-6 offset-sm-2 mt-3">
 			<h1>List of posts</h1>
 			<ol>
 				<% @post.each do |post| %>
