--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-6 ml-3 mt-3">
+		<div class="col-sm-6 offset-sm-2 mt-3">
 			<h1> Create new post</h1>
 			<%= form_with scope: :post, url: posts_path, local: true do |form| %>
 				<p>
