--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-6 ml-3 mt-3">
+		<div class="col-sm-6 offset-sm-2 mt-3">
 			<h4>Post title: <strong><%= @post.post_title%></strong></h4><hr/>
 			<%= @post.content %><br/>
 			<%= link_to 'Edit', edit_post_path, :class => "btn btn-info"%>
