--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,6 +1,25 @@
-<%= form_with model: @comment, local: true do |form| %>
-  <p>
-    <%= form.text_area :commentContents %>
-  </p>
-   <%= form.submit %>
-<% end %>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-6 ml-3 mt-3">
+
+		<%= form_with model: @comment, url: post_comments_path,local: true do |form| %>
+
+		<p>
+
+			<br>
+			<%= form.label :Edit_Comments %>
+			<br>
+			<%= form.text_area :commentContents %>
+		</p>
+	 	<p>
+			<%= form.submit %>
+		</p>
+		<% end %>
+
+		<%= link_to 'Back', post_path %>
+		
+		</div>
+	</div>
+</div>
+
+
