--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,28 +8,37 @@
 			      method: :delete,
 			      data: { confirm: 'Are you sure?' } %>
 
+	<br>
+	<br>
 
+	<p> <b>Comments:</b> </p>
+	<% @comments.each do |comment| %>
+		<p><%= comment.commentContents %>
+		<%= link_to 'Edit',  edit_post_comment_path(@comments) %>
+		<%= link_to 'Delete', post_path,
+	      method: :delete,
+	      data: { confirm: 'Are you sure?' } %>
+	    </p>
+	<% end %>
 
-			<%= form_with scope: :comment, url: post_comments_path(post_id: @post.id), local: true do |form| %>
-				<p>
-					<%= form.label :commentContents %>
-					<%= form.text_area :commentContents %>
-				</p>
-				<p>
-					<%= form.hidden_field :post_id, value: @post.id %>
-				</p>
+	<%= form_with scope: :comment, url: post_comments_path(post_id: @post.id), local: true do |form| %>
+		<p>
+			<br>
+			<%= form.label :Add_Comments %>
+			<br>
+			<%= form.text_area :commentContents %>
+		</p>
+		<p>
+			<%= form.hidden_field :post_id, value: @post.id %>
+		</p>
+	 	<p>
+			<%= form.submit %>
+		</p>
+	<% end %>
 
-			 	<p>
-					<%= form.submit %>
-				</p>
-			<% end %>
+	<%= link_to 'Back', posts_path %>
+
 		</div>
 	</div>
 </div>
-
-
-
-
-
-
 
