--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -16,8 +16,8 @@
 		</p>
 		<% end %>
 
-		<%= link_to 'Back', post_path %>
-		
+		<%= link_to 'Back', post_path,  :class => "btn btn-info" %>
+
 		</div>
 	</div>
 </div>
