fix: comment edit and show

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
 
-		<%= form_with model: @comment, url: post_comments_path, local: true do |form| %>
+		<%= form_with model: @comment, url: post_comment_path, local: true do |form| %>
 
 		<p>
 
