--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container-fluid">
+	<div class="text-info">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
 			<h1>Edit Post</h1>
