--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,9 +2,7 @@
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
 			<h1> Create new post</h1>
-			<%= form_with scope: :post, url: programmer_post_path(programmer_id: @programmer.id), local: true do |form| %>
-
-
+			<%= form_with scope: :post, url: programmer_posts_path(@programmer), local: true do |form| %>
 				<p>
 					<%= form.label :post_title %><br>
 					<%= form.text_field :post_title %>
@@ -15,6 +13,7 @@
 					<%= form.text_area :content %>
 				</p>
 				<p>
+					<%= form.hidden_field :programmer_id, value:@programmer.id %>
 					<%= form.submit :class => "btn btn-info"%>
 				</p>
 			<% end %>
