--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,8 +3,7 @@
 		<div class="col-sm-6 ml-3 mt-3">
 			<h4>Post title: <strong><%= @post.post_title%></strong></h4><hr/>
 			<%= @post.content %><br/>
-			<%= @programmer.name %>
-			<%= link_to 'Edit', edit_post_path, :class => "btn btn-info"%>
+			<%= link_to 'Edit', edit_programmer_post_path(@programmer), :class => "btn btn-info"%>
 			<%= link_to 'Delete', post_path, :class => "btn btn-info",
 			      method: :delete,
 			      data: { confirm: 'Are you sure?' } %>
