add: programmer's name in post index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,7 @@
 
 /*// Custom bootstrap variables must be set or imported *before* bootstrap.*/
 @import "bootstrap";
+
+.name-footer {
+	color: #ff82f4;
+}
