--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -12,7 +12,7 @@
                   <%= link_to 'Show Profile', programmer_path(@programmer) %>
                   <%= link_to 'New Post', new_programmer_post_path(@programmer)%>
 
-									<%= link_to 'All Posts', programmer_posts_path(@programmer) %>
+									<%= link_to 'All Posts', posts_path %>
                 <% end %>
           <% end %>
         </nav>
