--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 	  	  <form class="form-inline">
 	  	  		<% if current_user.programmer != nil  %>
                 <%= link_to 'My Profile', programmer_path(current_user.programmer.id) %>
+                <%= link_to 'My Post',  programmer_posts_path(current_user.programmer.id) %>
 	 					<% else %>
 	 							<%= link_to 'My Profile', new_programmer_path  %>
 	 					<% end %>
