--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 	 					<% end %>
 
 	  	  	<div style="padding-left: 30px;">
-	 					<%= link_to 'Forum', posts_path %>
+	 					<%= link_to 'All posts', posts_path %>
 	 				</div>
 	 				<div style="padding-left: 30px;">
 	 					<%= link_to 'Chatbox' %>
