--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Back', posts_path %>
+
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
@@ -13,7 +15,6 @@
 				<%= form.submit :class => "btn btn-info"%>
 			</p>
 		<% end %>
-		<%= link_to 'Back', post_path,  :class => "btn btn-info" %>
 		</div>
 	</div>
 </div>
