--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,6 +8,10 @@
 						<%= link_to post.post_title, post_path(post.id)%></h3></li>
 					<p><%= post.content %></p>
 					<p class="name-footer"><%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %></p>
+					<%= link_to like_post_path(post), method: :put do %>
+					  Upvote
+					  <%= post.get_upvotes.size %>
+					<% end %>
 				<% end %>
 			</ol>
       <%= link_to 'Create New Post', new_programmer_post_path(programmer_id: @programmer.id), :class => "btn btn-info"%>
