--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
 					<p><%= post.content %></p>
 					<p class="name-footer"><%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %></p>
 					<%= link_to like_post_path(post, @programmer), method: :put do %>
-					  Upvote
+					  <%= image_tag("/images/like.png", :style => "width: 5%")%>
 					  <%= post.get_upvotes.size %>
 					<% end %>
 				<% end %>
