--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,13 +4,17 @@
 			<h1>List of posts</h1>
 			<ol>
 				<% @post.each do |post| %>
-					<li><h3>
-						<%= link_to post.post_title, post_path(post.id)%></h3></li>
+					<li><h2>
+						<%= link_to post.post_title, post_path(post.id)%></h2></li>
 					<p><%= post.content %></p>
-					<p class="name-footer"><%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %></p>
+					<p class="name-footer"><%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #222df7" %></p>
 					<%= link_to like_post_path(post, @programmer), method: :put do %>
-					  <%= image_tag("/images/like.png", :style => "width: 5%")%>
+					  <%= image_tag("/images/like.svg", :style => "width: 2%")%>
 					  <%= post.get_upvotes.size %>
+					<% end %>
+					<%= link_to dislike_post_path(post, @programmer), method: :put do %>
+					  <%= image_tag("/images/thumbdown.svg", :style => "width: 2%")%>
+					  <%= post.get_downvotes.size %>
 					<% end %>
 				<% end %>
 			</ol>
