--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,17 +5,18 @@
 			<ol>
 				<% @post.each do |post| %>
 					<li><h2>
-						<%= link_to post.post_title, post_path(post.id)%></h2></li>
+						<%= link_to post.post_title, programmer_post_path(@programmer.id,post.id)%></h2></li>
 					<p><%= post.content %></p>
 					<p class="name-footer"><%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #222df7" %></p>
 					<%= link_to like_post_path(post, @programmer), method: :put do %>
-					  <%= image_tag("/images/like.svg", :style => "width: 2%")%>
+					  <%= image_tag("/images/like.svg", :style => "width: 5%")%>
 					  <%= post.get_upvotes.size %>
 					<% end %>
 					<%= link_to dislike_post_path(post, @programmer), method: :put do %>
-					  <%= image_tag("/images/thumbdown.svg", :style => "width: 2%")%>
+					  <%= image_tag("/images/thumbdown.svg", :style => "width: 5%")%>
 					  <%= post.get_downvotes.size %>
 					<% end %>
+					<br/>
 				<% end %>
 			</ol>
       <%= link_to 'Create New Post', new_programmer_post_path(programmer_id: @programmer.id), :class => "btn btn-info"%>
