General styling for index, programmer and posts

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
-			<h1>List of posts</h1>
+			<h1>Top Questions</h1>
 			<ol>
 				<% @post.each do |post| %>
 					<li><h3>
@@ -10,7 +10,6 @@
 					<p class="name-footer"><%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %></p>
 				<% end %>
 			</ol>
-      <%= link_to 'Create New Post', new_programmer_post_path(programmer_id: @programmer.id), :class => "btn btn-info"%>
 		</div>
 	</div>
 </div>
