--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,7 @@
  *
  *= require_tree .
  *= require_self
- *= stub main_style.scss
+ *= stub main_style.css
  */
 
 /*// Custom bootstrap variables must be set or imported *before* bootstrap.*/
