--- a/app/views/programmers/index.html.erb
+++ b/app/views/programmers/index.html.erb
@@ -1,20 +1,21 @@
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-6 ml-3 mt-3">
-        <nav>
-          <% if user_signed_in? %>
-              <% if @programmer == nil %>
-                <%= "Please create your profile" %>
-                <%= link_to 'Create Profile', new_programmer_path %>
-              <% else %>
-                  <%= @programmer.name %>
-                  <%= link_to 'Show Profile', programmer_path(@programmer) %>
-                  <%= link_to 'New Post', new_programmer_post_path(@programmer)%>
-
-									<%= link_to 'All Posts', posts_path %>
-                <% end %>
-          <% end %>
-        </nav>
-    </div>
-  </div>
+<div class="jumbotron">
+			<div class="row	mt-3">
+					<div class="col-sm-9">
+						<h1 class="display-2">Hello, Monkeys!</h1>
+							<p class="lead">This web encapsulates the vision of connecting all programmers to share programming ideas and ask questions.</p>
+							<% if !user_signed_in? %>
+									<p>All are welcome to discuss your ideas and marvel at the amazing ideas of other developers. Sign up now!</p>
+									<p>Already have an account? No Problem! Come and check out posts created by other developers</p>
+							<% elsif user_signed_in? && (current_user.programmer == nil) %>
+									<p>All are welcome to discuss your ideas and marvel at the amazing ideas of other developers. Start by creating your profile.</p>
+							<% else %>
+									<button class="btn-lg">
+										<%= link_to 'Create a post', new_programmer_post_path(programmer_id: @programmer)%>
+									</button>
+							<% end %>
+					</div>
+					<div class="col-sm-3">
+							<img src="https://res.cloudinary.com/dgwida4t5/image/upload/v1541144116/monkey.jpg" alt="programmer-ape" height="200" width="200">
+					</div>
+			</div>
 </div>
