--- a/app/views/programmers/show.html.erb
+++ b/app/views/programmers/show.html.erb
@@ -1,5 +1,4 @@
 <%= stylesheet_link_tag "main_style" %>
-<%= link_to 'back', root_path %>
 
 <div class="container">
 		<div class="row	mt-3">
@@ -18,7 +17,12 @@
 							<div class="row	mt-3">
 
 							</div>
-							<h3><%= link_to 'Edit Profile', edit_programmer_path(@programmer) %></h3>
+								<button class="btn-lg">
+									<%= link_to 'Edit Profile', edit_programmer_path(@programmer) %>
+								</button>
+								<div class="mt-3">
+									<%= link_to 'back', root_path %>
+								</div>
 					</div>
 
 					<div class="col-sm-6">
