fix: filter user name in the post show for both comments and posts

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 		<div class="col-sm-6 ml-3 mt-3">
 			<h4>Post title: <strong><%= @post.post_title%></strong></h4><%= @programmer.name %><br/>
 			<%= @post.content %><br/>
-			<%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
+			<%=link_to @post.programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
 			<%= link_to 'Edit', edit_programmer_post_path(@programmer), :class => "btn btn-info"%>
 			<%= link_to 'Delete', programmer_post_path(@programmer), :class => "btn btn-info",
 			      method: :delete,
@@ -22,7 +22,7 @@
 		      method: :delete,
 		      data: { confirm: 'Are you sure?' } %>
 		<br>
-		    <%=link_to @programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
+		    <%=link_to @post.programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
 	    </p>
 	<% end %>
 
