--- a/app/views/programmers/new.html.erb
+++ b/app/views/programmers/new.html.erb
@@ -1,20 +1,23 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-sm-6 ml-3 mt-3">
+
+			<div class="row	mt-3">
+			<h3>Make changes to my profile</h3>
         <%= form_with scope: :programmer, url: programmers_path, local: true do |form| %>
 
             <%= form.label :name %>
-            <%= form.text_field :name %>
+            <%= form.text_field :name %><br>
 
 
             <%= form.label :level %>
-            <%= form.select(:level, options_for_select([['Rookie', 'Rookie'], ['Expert', 'Expert']]), :include_blank => true) %>
+            <%= form.select(:level, options_for_select([['Rookie', 'Rookie'], ['Expert', 'Expert']]), :include_blank => true) %><br>
 
             <%= form.label :photo_url %>
-            <%= form.file_field :photo_url %>
+            <%= form.file_field :photo_url %><br>
             <%= form.submit "Create" %>
-
-        <% end %>
+ 						<% end %>
+		</div>
     </div>
   </div>
 </div>
