--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
 		      method: :delete,
 		      data: { confirm: 'Are you sure?' } %>
 		<br>
-		    <%=link_to @post.programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
+		    <%=link_to comment.programmer.name, programmer_path(@programmer.id), :style =>"color: #ff82f4" %><br/>
 	    </p>
 	<% end %>
 
